[Fix #25] Smooth body scrolling on iOS Safari

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -20,6 +20,7 @@ body {
   main {
     flex: 1 1 0px;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
     width: 100%;
   }
